Overview of changes in Glib::Object::Introspection 0.023
========================================================

* Fix return value handling on big-endian architectures.

Overview of changes in Glib::Object::Introspection 0.022
========================================================

* Reset the 'release_status' flag to 'stable' so CPAN will index the release.
  This reverts a change made in 61345ca2.  There are no functional changes
  from release 0.021.

Overview of changes in Glib::Object::Introspection 0.021
========================================================

* Clarify a statement about typelib files in the docs
* Mention GI_TYPELIB_PATH in the docs for "search_path"
* Remove address in GPL notices, refer to LICENSE file

Overview of changes in Glib::Object::Introspection 0.020
========================================================

* Allow undefined values for boolean arguments (and interpret them as "false").
* Fix a few internal signed/unsigned integer mismatches.

Overview of changes in Glib::Object::Introspection 0.019
========================================================

* Fix spelling of two internal functions
* Fix off-by-one error in internal string comparison

Overview of changes in Glib::Object::Introspection 0.018
========================================================

* Fix registering unregistered enums.
* Mark a few tests as known to fail so that they do not abort installation.

Overview of changes in Glib::Object::Introspection 0.017
========================================================

* Register unregistered enums so that, e.g., GSpawnFlags and VtePtyFlags become
  usable.
* Pass on NULL user data in C invocations if appropriate

Overview of changes in Glib::Object::Introspection 0.016
========================================================

* Add support for unicode character arguments to Perl callbacks.
* Avoid misusing the macro PL_na, thus preventing issues when