@@ -65,5 +65,5 @@
       },
       "x_MailingList" : "https://mail.gnome.org/mailman/listinfo/gtk-perl-list"
    },
-   "version" : "0.023"
+   "version" : "0.024"
 }
