@@ -1,3 +1,8 @@
+Overview of changes in Glib::Object::Introspection 0.024
+========================================================
+
+* Fix a stack handling bug for Perl vfuncs.
+
 Overview of changes in Glib::Object::Introspection 0.023
 ========================================================
 
